--- a/public/analisis.html
+++ b/public/analisis.html
@@ -782,7 +782,7 @@
                             <select class="form-select" id="reporte-formato">
                                 <option value="pdf">PDF</option>
                                 <option value="excel">Excel</option>
-                                <option value="csv">CSV</option>
+                                <option value="json">JSON</option>
                             </select>
                         </div>
                         <div class="col-md-3">
